# spacker

./: CMakeLists.txt  README.md
demo/: comparison.Rmd
demo/package/: DESCRIPTION  NAMESPACE
demo/package/R/: RcppExports.R  namespace.R  run.R
demo/package/man/: spack.Rd
demo/package/src/: RcppExports.cpp  spacker  test.cpp
include/spacker/: Doubling.hpp  Multiplier.hpp  pack.hpp  pack_psip.hpp  unpack.hpp  unpack_psip.hpp  utils.hpp
tests/: CMakeLists.txt
tests/src/: pack.cpp  pack_doubling.cpp  pack_multiplier.cpp  pack_psip.cpp  unpack_doubling.cpp  unpack_multiplier.cpp  unpack_psip.cpp
